Prototype of dark mode fix.
NOTE: this CL is not intended to land. It's a prototype to go with the design
doc proposal for a new dark mode.

Bug: 1122511

--- a/front_end/elements/stylesSidebarPane.css
+++ b/front_end/elements/stylesSidebarPane.css
@@ -22,7 +22,7 @@
 }
 
 .styles-section.read-only {
-  background-color: #fafafa;
+  background-color: var(--dark-mode-prototype-bg-color-1);
   font-style: italic;
 }
 
